--- a/src/styles/albumPage.css
+++ b/src/styles/albumPage.css
@@ -15,12 +15,12 @@
 	grid-template-columns: repeat(24, calc(100% / 24));
 	grid-template-rows: repeat(24, calc(100% / 24));
 	margin: 0 auto;
-	padding-bottom: 40px;	
+	padding-bottom: 40px;
 }
 
 .album-page1-bg {
-	background-image: url("https://media.istockphoto.com/id/502451497/photo/dark-blue-aluminum-background.jpg?b=1&s=170667a&w=0&k=20&c=9SxDAN3Sl5V7_n9GcakkfF54G3U67tPnk7VkLa160Wk=");
-	background-size: fixed;
+	/* background-image: url("https://media.istockphoto.com/id/502451497/photo/dark-blue-aluminum-background.jpg?b=1&s=170667a&w=0&k=20&c=9SxDAN3Sl5V7_n9GcakkfF54G3U67tPnk7VkLa160Wk=");
+	background-size: fixed; */
 }
 
 .new-pack {
@@ -73,7 +73,7 @@
 }
 
 .sticker2 {
-	grid-column: 10 / 16 ;
+	grid-column: 10 / 16;
 	grid-row: 9 / 15;
 }
 
@@ -93,13 +93,20 @@
 }
 
 .sticker6 {
-	grid-column: 7 / 13 ;
-	grid-row: 19 /25 ;
+	grid-column: 7 / 13;
+	grid-row: 19 /25;
 }
 
 .sticker6 .album-sticker-vertical .album-sticker-border {
 	border-right: none;
 	padding-right: 4px;
+	border-top-right-radius: 0;
+	border-bottom-right-radius: 0;
+}
+
+.sticker6 .album-sticker-vertical {
+	border-left: none !important;
+	border-radius: 0;
 }
 
 .sticker7 {
@@ -109,6 +116,13 @@
 
 .sticker7 .album-sticker-vertical .album-sticker-border {
 	border-left: none !important;
+	border-top-left-radius: 0;
+	border-bottom-left-radius: 0;
+}
+
+.sticker7 .album-sticker-vertical {
+	border-left: none !important;
+	border-radius: 0;
 }
 
 .sticker8 {
@@ -129,11 +143,7 @@
 	background-color: rgba(0, 0, 0);
 	border: none;
 	border-radius: 5px;
-	
-	
 }
-
-
 
 .new-pack {
 	height: max-content;
@@ -147,6 +157,10 @@
 	height: 100%;
 	/* border: 4px solid white; */
 	overflow: hidden;
+	-webkit-box-shadow: 0px 0px 15px 0px rgba(0, 0, 0, 1.37);
+	-moz-box-shadow: 0px 0px 15px 0px rgba(0, 0, 0, 1.37);
+	box-shadow: 0px 0px 15px 0px rgba(0, 0, 0, 1.37);
+	border-radius: 5px;
 }
 
 .album-sticker-vertical {
@@ -156,7 +170,10 @@
 	height: 100%;
 	/* border: 4px solid white; */
 	overflow: hidden;
-	
+	-webkit-box-shadow: 0px 0px 15px 0px rgba(0, 0, 0, 0.37);
+	-moz-box-shadow: 0px 0px 15px 0px rgba(0, 0, 0, 0.37);
+	box-shadow: 0px 0px 15px 0px rgba(0, 0, 0, 0.37);
+	border-radius: 5px;
 }
 
 .album-sticker-circular {
@@ -169,7 +186,7 @@
 	border-radius: 50%;
 }
 
-.album-sticker-number  {
+.album-sticker-number {
 	position: absolute;
 	top: 1;
 	left: 50%;
@@ -225,7 +242,7 @@
 		height: 500px;
 		/* 12 columnas iguales y 12 filas iguales */
 		grid-template-columns: repeat(24, calc(100% / 24));
-	grid-template-rows: repeat(24, calc(100% / 24));
+		grid-template-rows: repeat(24, calc(100% / 24));
 		margin: 0 auto;
 		padding-top: 10px;
 	}
