--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -32,7 +32,7 @@ body {
 	max-height: 100%;
 	min-height: 0;
 	min-width: 0;
-	background-color: #212529;
+	/* background-color: #212529; */
   }
 
   .swiper-container-new-pack {
