--- a/src/styles/stickers.css
+++ b/src/styles/stickers.css
@@ -226,6 +226,120 @@
 	border-top: none;
 }
 
+.sticker84 .album-sticker {
+	margin-top: 40px !important;
+	width: 350px;
+	margin: 0px;
+	border-bottom: none;
+	border-right: none;
+}
+
+.sticker84 .album-sticker .album-sticker-number-clicked {
+	position: absolute;
+	top: 0;
+	left: 0;
+	margin-left: -1px;
+	border-top: none;
+}
+
+.sticker85 .album-sticker {
+	margin-top: 40px !important;
+	width: 350px;
+	margin: -0px;
+	margin-left: -1px;
+	border-bottom: none;
+	border-left: none;
+}
+
+.sticker86 .album-sticker .album-sticker-number-clicked {
+	position: absolute;
+	top: 0;
+	right: 0;
+	border-top: none;
+}
+
+.sticker86 .album-sticker {
+	width: 350px;
+	margin: 0px;
+	margin-top: -4px;
+	border-top: none;
+	border-right: none;
+}
+
+.sticker87 .album-sticker .album-sticker-number-clicked {
+	position: absolute;
+	bottom: 0;
+	left: 0;
+	margin-left: -1px;
+	border-top: none;
+}
+
+.sticker87 .album-sticker {
+	width: 350px;
+	margin: 0px;
+	margin-left: -1px;
+	margin-top: -4px;
+	border-top: none;
+	border-left: none;
+}
+
+.sticker88 .album-sticker {
+	width: 350px;
+	margin: 0px;
+	border-bottom: none;
+	border-right: none;
+	margin-top: 40px;
+}
+
+.sticker88 .album-sticker .album-sticker-number-clicked {
+	position: absolute;
+	top: 0;
+	left: 0;
+	margin-left: -1px;
+	border-top: none;
+}
+
+.sticker89 .album-sticker {
+	width: 350px;
+	margin: -0px;
+	margin-left: -1px;
+	border-bottom: none;
+	border-left: none;
+	margin-top: 40px;
+}
+
+.sticker90 .album-sticker .album-sticker-number-clicked {
+	position: absolute;
+	top: 0;
+	right: 0;
+	border-top: none;
+}
+
+.sticker90 .album-sticker {
+	width: 350px;
+	margin: 0px;
+	margin-top: -4px;
+	border-top: none;
+	border-right: none;
+}
+
+.sticker91 .album-sticker .album-sticker-number-clicked {
+	position: absolute;
+	bottom: 0;
+	left: 0;
+	margin-left: -4px;
+	border-top: none;
+}
+
+.sticker91 .album-sticker {
+	width: 350px;
+	margin: 0px;
+	margin-left: -1px;
+	margin-top: -4px;
+	border-top: none;
+	border-left: none;
+}
+
 
 
 @media (max-width: 768px) {
@@ -328,4 +442,45 @@
 		margin: -2.5px;
 		border-top: none;
 	}
+
+	.sticker84 .album-sticker {
+		width: 175px;
+		margin-bottom: -1px;
+	}
+
+	.sticker85 .album-sticker {
+		width: 175px;
+		margin-bottom: -1px;
+	}
+
+	.sticker86 .album-sticker {
+		width: 175px;
+		margin-top: -3.2px;
+	}
+
+	.sticker87 .album-sticker {
+		width: 175px;
+		margin-top: -3.2px;
+	}
+
+	.sticker88 .album-sticker {
+		width: 175px;
+		margin-bottom: -1px;
+	}
+
+	.sticker89 .album-sticker {
+		width: 175px;
+		margin-bottom: -1px;
+	}
+
+	.sticker90 .album-sticker {
+		width: 175px;
+		margin-top: -4px;
+	}
+
+	.sticker91 .album-sticker {
+		width: 175px;
+		margin-top: -4px;
+	}
+
 }
